Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35748

Attempting to create a CONNECT engine Table results in non-InnoDB sequences in Galera cluster error

    XMLWordPrintable

Details

    Description

      The following fails with seemingly completely unrelated error on a 10.11.9 Galera Cluster:

      CREATE OR REPLACE TABLE hub.`mmc_players_test` (
        `mmc_serialNumber` varchar(10) DEFAULT NULL,
        `network_name` varchar(50) DEFAULT NULL,
        `player_desc` varchar(200) DEFAULT NULL,
        `group_name` varchar(50) DEFAULT NULL,
        `venue_name` varchar(100) DEFAULT NULL,
        `venue_desc` varchar(200) DEFAULT NULL,
        `layout_name` varchar(50) DEFAULT NULL,
        `layout_desc` varchar(200) DEFAULT NULL
      ) ENGINE=CONNECT table_type=mysql CONNECTION='mysql://aaa:bbb@x.x.x.x/mc_media/v_mmc_players';
      

      [42000][1235] This version of MariaDB doesn't yet support 'non-InnoDB sequences in Galera cluster'

      PLUGIN_VERSION=1.7
      PLUGIN_TYPE_VERSION=101109.0
      PLUGIN_AUTH_VERSION=1.07.0003

      The above create CONNECT table statements works correctly on a 10.6.15 Galera Cluster.
      PLUGIN_VERSION=1.7
      PLUGIN_TYPE_VERSION=100615.0
      PLUGIN_AUTH_VERSION=1.07.0003

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              stephanvos Stephan Vos
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.